--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 axum = "0.7.4"
 axum-macros = "0.4.1"
+base64 = "0.21.7"
 clap = { version = "4.4.18", features = ["derive"] }
 dptree = "0.3.0"
 once_cell = "1.19.0"
@@ -15,4 +16,7 @@ serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 teloxide = { version = "0.12.2", features = ["macros"] }
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1.40"
+tracing-appender = "0.2.3"
+tracing-subscriber = "0.3.18"
 uuid = { version = "1.7.0", features = ["v4"] }
