--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lints.clippy]
+pedantic = "warn"
+
 [dependencies]
 axum = "0.7.4"
 axum-macros = "0.4.1"
